[gd_scene load_steps=11 format=3 uid="uid://bcbncr2v4l7wg"]

[ext_resource type="Texture2D" uid="uid://3hga0dahx56y" path="res://sprites/menu/charselect/CharacterSelect_normal_bg.png" id="1_3lcj1"]
[ext_resource type="Script" uid="uid://dfs7nu5tqyjd" path="res://scenes/menu/charselect/character_slot.gd" id="1_lj2eb"]
[ext_resource type="Texture2D" uid="uid://c8wqqh6gb0nuk" path="res://sprites/menu/charselect/CharacterSelect_hover_bg.png" id="2_3175a"]
[ext_resource type="Texture2D" uid="uid://dq80h23la56us" path="res://sprites/menu/charselect/characters/shimeji.png" id="2_jdokc"]
[ext_resource type="Texture2D" uid="uid://btv8r3lyna733" path="res://sprites/menu/charselect/CharacterSelect_normal_border.png" id="3_24qhg"]
[ext_resource type="Texture2D" uid="uid://cbnbk3djdrniw" path="res://sprites/menu/charselect/CharacterSelect_select_bg.png" id="4_hcdoq"]
[ext_resource type="Texture2D" uid="uid://7hbxhtwk16pt" path="res://sprites/menu/charselect/CharacterSelect_select_bolder.png" id="7_f2x5w"]
[ext_resource type="Texture2D" uid="uid://cq8kfcxku5t1m" path="res://sprites/menu/charselect/CharacterSelect_hover_border.png" id="8_tirqn"]
[ext_resource type="AudioStream" uid="uid://g06i7gshwlkm" path="res://sfx/menu/charmenu/sfx_charmenu_select.ogg" id="9_150o5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5iajh"]
animations = [{
"frames": [],
"loop": true,
"name": &"current",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3175a")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3lcj1")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_hcdoq")
}],
"loop": true,
"name": &"select",
"speed": 5.0
}]

[node name="CharacterSlot" type="Panel"]
anchors_preset = -1
anchor_right = 0.028
anchor_bottom = 0.049
offset_right = -32.256
offset_bottom = -31.752
script = ExtResource("1_lj2eb")

[node name="CharSelect_BG" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(32, 32)
sprite_frames = SubResource("SpriteFrames_5iajh")
animation = &"normal"
autoplay = "normal"

[node name="CharSelect_Char" type="TextureRect" parent="CharSelect_BG"]
texture_filter = 1
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("2_jdokc")
metadata/_edit_use_anchors_ = true

[node name="CharSelect_FG" type="TextureRect" parent="CharSelect_BG/CharSelect_Char"]
texture_filter = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_24qhg")
metadata/_edit_use_anchors_ = true

[node name="SlotButton" type="TextureButton" parent="CharSelect_BG/CharSelect_Char/CharSelect_FG"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture_normal = ExtResource("3_24qhg")
texture_pressed = ExtResource("7_f2x5w")
texture_hover = ExtResource("8_tirqn")
metadata/_edit_use_anchors_ = true

[node name="SelectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_150o5")

[connection signal="pressed" from="CharSelect_BG/CharSelect_Char/CharSelect_FG/SlotButton" to="." method="_on_slot_button_pressed"]
